# blog

./: .gitignore  README.md  blog.cabal  books.markdown  index.html  quotes.markdown  site.hs
css/: default.css  syntax.css
docs/: CNAME  archive.html  books.html  index.html
docs/css/: default.css  syntax.css
docs/posts/: 2019-12-04-reactive-banana-tutorial.html  2019-12-19-exploit-your-interest.html  2021-05-29-my-personal-creed-of-employment.html
posts/: 2017-09-01-reactive-banana-tutorial.markdown  2019-12-04-reactive-banana-tutorial.markdown  2019-12-19-exploit-your-interest.markdown  2021-05-29-my-personal-creed-of-employment.markdown
templates/: default.html  post-list.html  post.html
