cabal-version:          3.0
name:                   blog
version:                0.0.0.0
build-type:             Simple

executable site
  default-language:     Haskell2010
  main-is:              site.hs
  default-extensions:   BangPatterns
                        InstanceSigs
                        LambdaCase
                        MultiWayIf
                        NoMonomorphismRestriction
                        OverloadedStrings
                        PartialTypeSignatures
                        PatternGuards
                        ScopedTypeVariables
                        TypeApplications
                        ViewPatterns
  ghc-options:          -Wall
                        -Wcompat
                        -Widentities
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wnoncanonical-monad-instances
                        -Wpartial-fields
                        -Wredundant-constraints
                        -threaded
                        -rtsopts
                        -fdefer-typed-holes
                        -fno-warn-missing-signatures
                        -fno-warn-partial-type-signatures
  build-depends:        base == 4.*
                      , filepath == 1.4.*
                      , hakyll == 4.13.*
